--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper dark">
+<!-- <div class="content-wrapper dark">
     <div class="content-inner-wrapper" *ngIf="auth.userProfile$ | async as profile">
         <div class="download-area">
             <img src="{{ profile.picture }}" class="ico" />
@@ -11,13 +11,6 @@
             <code>{{ profile | json }}</code>
             </pre>
 
-            <!-- Account level -->
-
-
-            <!-- Email -->
-
-            <!-- Cancel -->
-
         </div>
     </div>
-</div>
+</div> -->
