--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -9,9 +9,9 @@
         <div class="flex-container">
             <!-- <div *ngFor="let key of objectKeys(track.modules[editingModule].settings)"> -->
 
-            <div *ngFor="let pack of packs" class="marketplace-grid">
+            <!-- <div *ngFor="let pack of packs" class="marketplace-grid">
 
-            </div>
+            </div> -->
 
         </div>
 
