add old version

--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -232,4 +232,14 @@
 
         <div class='clearfix'></div>
 
+        <br><br>
+        <a class="button" class="pink" target="_blank" href="https://github.com/madchops1/visualz-releases/releases"
+            role="link" mat-raised-button>
+            Older Versions
+        </a>
+
+
+        <div class='clearfix'></div>
+
+
     </div>
