add old version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
             <button mat-menu-item routerLink="/support">COMMUNITY</button>
             <!-- <button mat-menu-item>visualzapp.contact@gmail.com</button> -->
         </mat-menu>
-        <button href="mailto:visualzapp.contact@gmail.com" mat-button>CONTACT</button>
+        <!-- <button href="mailto:visualzapp.contact@gmail.com" mat-button>CONTACT</button> -->
 
         <!-- <button mat-raised-button class="btn btn-primary btn-margin" *ngIf="!auth.loggedIn" (click)="auth.login()">
             LOG IN
