--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -36,7 +36,7 @@
             <img src="../../assets/images/icon.ico" class="ico" />
 
             <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix">
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.4/Visualz-2.1.4.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.5/Visualz-2.1.5.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Mac
                 </a>
@@ -44,7 +44,7 @@
             </div>
 
             <div *ngIf="deviceInfo.os != 'Mac' && deviceInfo.os != 'iOS'" class="clearfix">
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.4/Visualz-Setup-2.1.4.exe"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.5/Visualz-Setup-2.1.5.exe"
                     target="_blank" mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download Windows
                 </a>
@@ -53,16 +53,24 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.1.4</h1>
+            <h1>VISUALZ v2.1.5</h1>
 
             <div class="">
                 <h2>What's New in Version 2</h2>
 
-                <!-- 6/20 -->
-                <h2>Update 2.1.4</h2>
+
+
+                <!-- 7/17/20 -->
+                <h2>Update 2.1.5</h2>
                 <ul class='new'>
                     <li>Added dedicated Peer to Peer Servers for streaming to the browser, better integrating with OBS
                         and livestreaming functionality.</li>
+
+                </ul>
+
+                <!-- 7/17/20 -->
+                <h2>Update 2.1.4</h2>
+                <ul class='new'>
                     <li>Upgraded TURN (ICE) servers with relay and global availability for better streaming to the
                         browser, better integrating with OBS and livestreaming functionality.</li>
                 </ul>
