update version number across the app

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -62,7 +62,7 @@
             <!-- <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="mac" src="../../assets/images/macos.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.5/Visualz-2.1.5.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.6/Visualz-2.1.6.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Mac
                 </a>
@@ -71,7 +71,7 @@
             <!-- <div *ngIf="deviceInfo.os != 'Mac' && deviceInfo.os != 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="windows" src="../../assets/images/windows.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.5/Visualz-Setup-2.1.5.exe"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.6/Visualz-Setup-2.1.6.exe"
                     target="_blank" mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download Windows
                 </a>
@@ -79,19 +79,24 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.1.5</h1>
+            <h1>VISUALZ v2.1.6</h1>
 
             <div class="">
                 <h2>What's New in Version 2</h2>
 
-
+                <!-- 8/28/20 -->
+                <h2>Burning Man The Update - 2.1.6</h2>
+                <ul class='new'>
+                    <li>Bugfixes across the board! We really wanted to lock things down before the Burning Man 2020
+                        Multiverse, 8/30/20 - 9/6/20. Burning Man &amp; Kindling have recommended VISUALZ to the
+                        livestream artists performing during the event :) THANKS!</li>
+                </ul>
 
                 <!-- 7/17/20 -->
                 <h2>Update 2.1.5</h2>
                 <ul class='new'>
                     <li>Added dedicated Peer to Peer Servers for streaming to the browser, better integrating with OBS
                         and livestreaming functionality.</li>
-
                 </ul>
 
                 <!-- 7/17/20 -->
