--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,3 +37,13 @@ $breakpoint-mobile: 768px;
 
     }
 }
+
+.btn-user {
+    background: rgba(255,255,255,0.3);
+    margin-left: 10px;
+    padding: 5px 10px;
+}
+
+.mat-dialog-container {
+    font-size: 14px;
+}
