--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <button mat-button routerLink="/download">GET IT NOW</button>
     <button mat-button routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
     <!-- <button mat-button routerLink="/calendar">CALENDAR</button> -->
-    <!-- <button mat-button routerLink="/marketplace">MARKETPLACE</button> -->
+    <button mat-button routerLink="/marketplace">MARKETPLACE</button>
     <button mat-button [matMenuTriggerFor]="menu1">LEARN</button>
     <mat-menu #menu1="matMenu">
         <button mat-menu-item routerLink="/how-it-works">START HERE</button>
@@ -38,7 +38,7 @@
             <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button>
         </mat-menu> -->
         <!-- <button mat-button routerLink="/calendar">CALENDAR</button> -->
-        <!-- <button mat-button routerLink="/marketplace">MARKETPLACE</button> -->
+        <button mat-button routerLink="/marketplace">MARKETPLACE</button>
         <button mat-button [matMenuTriggerFor]="menu">LEARN</button>
         <mat-menu #menu="matMenu">
             <button mat-menu-item routerLink="/how-it-works">START HERE</button>
@@ -49,17 +49,18 @@
         </mat-menu>
         <!-- <button href="mailto:visualzapp.contact@gmail.com" mat-button>CONTACT</button> -->
 
-        <!-- <button mat-raised-button class="btn btn-primary btn-margin" *ngIf="!auth.loggedIn" (click)="auth.login()">
+        <button mat-raised-button class="btn btn-primary btn-margin" *ngIf="!auth.loggedIn" (click)="auth.login()">
             LOG IN
         </button>
-        <button mat-button [matMenuTriggerFor]="menu3" *ngIf="auth.loggedIn" class="btn btn-primary btn-margin">
+        <button mat-button [matMenuTriggerFor]="menu3" *ngIf="auth.loggedIn"
+            class="btn btn-primary btn-margin btn-user">
             <img [src]="auth.userProfile$.source._value.picture" /> {{ auth.userProfile$.source._value.given_name }}
         </button>
         <mat-menu #menu3="matMenu">
             <button mat-menu-item routerLink="/profile">PROFILE</button>
             <button mat-menu-item routerLink="/account">ACCOUNT</button>
             <button mat-menu-item (click)="auth.logout()">LOGOUT</button>
-        </mat-menu> -->
+        </mat-menu>
     </div>
 
     <div class="clearfix"></div>
@@ -73,8 +74,10 @@
     <a routerLink="/">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/about">About</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/download">Get It Now</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a routerLink="/live-stream-tools">LIVE STREAM TOOLS</a>
+
     <!-- <a routerLink="/calendar">Calendar</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
-    <!-- <a routerLink="/marketplace">Marketplace</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
+    <a routerLink="/marketplace">Marketplace</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/how-it-works">Learn</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="https://www.instagram.com/visualzapp/" target="_blank">Instagram</a>
     <br>
