--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -21,7 +21,7 @@
     <div class="clearfix"></div>
 </div>
 
-<div class="content-wrapper dark" style="min-height: 150px !important; padding-bottom: 40px !important;">
+<!-- <div class="content-wrapper dark" style="min-height: 150px !important; padding-bottom: 40px !important;">
     <div class="">
         <h3 class="center" style="font-size: 30px;">
             VISUALZ IS RECCOMENDED AND USED BY
@@ -44,7 +44,7 @@
             </a>
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="content-wrapper youtube">
     <iframe width="710" height="399" src="https://www.youtube.com/embed/UyZFcEHbCBM?rel=0&amp;controls=0"
@@ -85,11 +85,10 @@
                 <h2>What's New in Version 2</h2>
 
                 <!-- 8/28/20 -->
-                <h2>Burning Man The Update - 2.1.6</h2>
+                <h2>Update 2.1.6</h2>
                 <ul class='new'>
-                    <li>Bugfixes across the board! We really wanted to lock things down before the Burning Man 2020
-                        Multiverse, 8/30/20 - 9/6/20. Burning Man &amp; Kindling have recommended VISUALZ to the
-                        livestream artists performing during the event :) THANKS!</li>
+                    <li>Bugfixes across the board! Several official curated Burning Man Kindling projects have
+                        recommended VISUALZ to the livestream artists performing during the event :) THANKS!</li>
                 </ul>
 
                 <!-- 7/17/20 -->
