--- a/src/app/marketplace-dialog-add/marketplace-dialog-add.component.html
+++ b/src/app/marketplace-dialog-add/marketplace-dialog-add.component.html
@@ -21,39 +21,57 @@
             <p>Create a name for your VJ pack.</p>
             <mat-form-field>
                 <mat-label>Name</mat-label>
-                <input matInput [(ngModel)]="data.name">
+                <input matInput [(ngModel)]="pack.name" required cdkFocusInitial>
             </mat-form-field>
 
             <p>Write a short description of your VJ Pack.</p>
             <mat-form-field class="wide">
                 <mat-label>Description</mat-label>
-                <input matInput [(ngModel)]="data.description">
+                <input matInput [(ngModel)]="pack.description" required>
             </mat-form-field>
 
             <p>Set a fair price. Somewhere between $1-20, based on the production quality and quantity of content.</p>
             <mat-form-field>
                 <mat-label>Price</mat-label>
-                <input matInput [(ngModel)]="data.price">
+                <input matInput [(ngModel)]="pack.price" required>
             </mat-form-field>
 
             <p>Upload any original image or video files you want to include for your customers with the VJ pack. <a
                     href="">Help?</a></p>
             <input type="file" multiple (change)="uploadRawFiles($event)" placeholder="Select Raw Files">
             <!-- <button mat-button color="primary" (click)="uploadRawFiles()">Upload Raw Files</button> -->
+            <ul>
+                <li *ngFor="let file of pack.rawFiles">
+                    {{ file.url }}
+                </li>
+            </ul>
 
             <p>Make a VISUALZ set or track with your original files and then upload the set file. Eg.
                 <strong>set-name[set].visualz</strong>. <a href="">Help?</a></p>
             <input type="file" (change)="uploadSetFile($event)" placeholder="Select .visualz File" accept=".visualz">
             <!-- <button mat-button color="primary" (click)="uploadSetFile()">Upload .visualz File</button> -->
+            <ul>
+                <li *ngIf="pack.setFile.url">
+                    {{ pack.setFile.url }}
+                </li>
+            </ul>
 
             <p>Make and upload a preview video of your set with VISUALZ.<a href="">Help?</a></p>
             <input type="file" (change)="uploadMp4File($event)" placeholder="Select .mp4 file" accept=".mp4">
             <!-- <button mat-button color="primary" (click)="uploadCoverImage()">Upload Cover Image</button> -->
+            <ul>
+                <li *ngIf="pack.mp4File.url">
+                    {{ pack.mp4File.url }}
+                </li>
+            </ul>
 
         </div>
         <div mat-dialog-actions>
-            <button mat-button (click)="onNoClick()">Cancel</button>
-            <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Submit VJ Pack</button>
+            {{ this.message }}
+            <button *ngIf="this.message == ''" mat-button (click)="onNoClick()">Cancel</button>
+            <button *ngIf="this.message == ''" mat-button (click)="submit()">
+                {{button}}
+            </button>
         </div>
     </div>
 </div>
