--- a/src/app/marketplace/marketplace.component.scss
+++ b/src/app/marketplace/marketplace.component.scss
@@ -17,3 +17,23 @@
     right: 20px;
     bottom: 20px;
 }
+
+.mat-drawer-container {
+    margin-bottom: 20px;
+}
+
+.search {
+    width: 50vw;
+    height: 80px;
+    font-size: 50px;
+    line-height: 50px;
+    margin: 0px auto;
+    border-radius: 6px;
+    display: block;
+}
+
+.advanced {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
