--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -1,11 +1,11 @@
 <div class="content-wrapper normal">
     <div class="content-inner-wrapper">
-        <h1 class="center">Resources</h1>
+        <h1 class="center">RESOURCES</h1>
 
         <h2>Where To Find Visuals Content?</h2>
 
         <p>
-            Vizualz has a creative commons viedeo library, gif search, and image search built in.
+            VISUALZ has a creative commons viedeo library, gif search, and image search built in.
             Making it very easy to find content fast.
         </p>
 
