--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -45,12 +45,10 @@
         </div>
     </div>
 </div> -->
-
+<!-- 
 <div class="content-wrapper youtube">
-    <iframe width="710" height="399" src="https://www.youtube.com/embed/UyZFcEHbCBM?rel=0&amp;controls=0"
-        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-</div>
+
+</div> -->
 
 
 <div class="content-wrapper dark">
@@ -82,7 +80,9 @@
             <h1>VISUALZ v2.1.6</h1>
 
             <div class="">
-                <h2>What's New in Version 2</h2>
+                <iframe width="100%" height="240" src="https://www.youtube.com/embed/UyZFcEHbCBM?rel=0&amp;controls=0"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
 
                 <!-- 8/28/20 -->
                 <h2>Update 2.1.6</h2>
@@ -90,7 +90,6 @@
                     <li>Bugfixes across the board! Several official curated Burning Man Kindling projects have
                         recommended VISUALZ to the livestream artists performing during the event :) THANKS!</li>
                 </ul>
-
                 <!-- 7/17/20 -->
                 <h2>Update 2.1.5</h2>
                 <ul class='new'>
@@ -237,6 +236,25 @@
         </div>
     </div>
 </div>
+
+<!-- <div class="content-wrapper dark" style="min-height: 150px !important; padding-bottom: 40px !important;">
+    <div class="">
+        <h3 class="center" style="font-size: 30px;">
+            VISUALZ IS RECCOMENDED AND USED BY
+        </h3>
+        <div class="invert">
+            <a href='https://www.opendoors.la/' target="_blank">
+                <img src="../../assets/images/opendoors.png" />
+            </a>
+            <a href='https://www.jnktn.tv/' target="_blank">
+                <img src="../../assets/images/jnktntv.png" />
+            </a>
+            <a href='https://www.youtube.com/channel/UCk7yZcoQFKGUWnyvF219LLw' target="_blank">
+                <img src="../../assets/images/kaizen.png" />
+            </a>
+        </div>
+    </div>
+</div> -->
 
 <header class="skew">
     <h2>Features</h2>
@@ -546,6 +564,32 @@
         <div id="disqus_thread" style="margin:200px auto;"></div>
     </div>
 </div>-->
+<!-- <div class="content-wrapper dark" style="min-height: 150px !important; padding-bottom: 40px !important;">
+    <div class="">
+        
+    </div>
+</div> -->
+
+<!-- Partners -->
+<header class="skew">
+    <h2>PARTNERS</h2>
+</header>
+<div class="content-wrapper dark small-bottom collab">
+    <div class="">
+        <div class="invert">
+            <a href='https://www.opendoors.la/' target="_blank">
+                <img src="../../assets/images/opendoors.png" />
+            </a>
+            <a href='https://www.jnktn.tv/' target="_blank">
+                <img src="../../assets/images/jnktntv.png" />
+            </a>
+            <a href='https://www.youtube.com/channel/UCk7yZcoQFKGUWnyvF219LLw' target="_blank">
+                <img src="../../assets/images/kaizen.png" />
+            </a>
+        </div>
+    </div>
+</div>
+
 <!-- Collaborators -->
 <header class="skew">
     <h2>Collaborators</h2>
@@ -579,7 +623,7 @@
             Once live events are possible again we'd love to do live and remote visuals for those as well.
         </p>
         <p class="center">
-            Contact visualzapp.contact@gmail.com to setup a demo or just talk about your visual needs as an artist.
+            Contact VISUALZAPP.CONTACT@GMAIL.COM to setup a demo or just talk about your visual needs as an artist.
         </p>
     </div>
 </div>
