--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,16 +1,90 @@
-<!-- <div class="content-wrapper dark">
+<div class="content-wrapper dark">
     <div class="content-inner-wrapper" *ngIf="auth.userProfile$ | async as profile">
         <div class="download-area">
             <img src="{{ profile.picture }}" class="ico" />
         </div>
         <div class="release-notes">
             <h1>{{ profile.given_name }} {{ profile.family_name }}</h1>
-
-
-            <pre *ngIf="auth.userProfile$ | async as profile">
-            <code>{{ profile | json }}</code>
-            </pre>
-
         </div>
+        <div class="clearfix"></div>
     </div>
-</div> -->
+
+    <div class="content-inner-wrapper" *ngIf="auth.userProfile$ | async as profile">
+        <div class="download-area">
+            <h2>Email</h2>
+        </div>
+        <div class="release-notes">
+            {{ profile.email }}
+        </div>
+        <div class="clearfix"></div>
+    </div>
+
+    <div class="content-inner-wrapper" *ngIf="auth.userProfile$ | async as profile">
+        <div class="download-area">
+            <h2>VISUALZ subscriptions</h2>
+        </div>
+        <div class="release-notes">
+            <div *ngIf="subscriptions">
+                <div *ngFor="let subscription of subscriptions">
+                    {{ subscription.plan.nickname }} | Start Date: {{ subscription.start*1000 | date }} | Interval:
+                    {{ subscription.plan.interval }} <br>
+                </div>
+            </div>
+            <div *ngIf="!subscriptions">
+                You are using for free! <a href="https://www.buymeacoffee.com/visualz" target="_blank">Please support or
+                    developers.</a>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+
+    <div class="content-inner-wrapper" *ngIf="auth.userProfile$ | async as profile">
+        <div class="download-area">
+            <h2>Your VJ Pack Catalog</h2>
+        </div>
+        <div class="release-notes">
+            <div *ngIf="catalog.length">
+                <div *ngFor="let pack of catalog" class="pack">
+                    {{ pack.name }}
+                </div>
+            </div>
+            <div *ngIf="!catalog.length">
+                You have not created any VJ packs for the marketpace.
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+
+    <div class="content-inner-wrapper" *ngIf="auth.userProfile$ | async as profile">
+        <div class="download-area">
+            <h2>Your VJ Pack Library</h2>
+        </div>
+        <div class="release-notes">
+            <div *ngIf="library.length">
+                <div *ngFor="let pack of library" class="pack">
+                    {{ pack.name }}
+                </div>
+            </div>
+            <div *ngIf="!library.length">
+                You have not purchased any VJ packs.
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+
+    <div class="content-inner-wrapper" *ngIf="auth.userProfile$ | async as profile">
+        <div class="download-area">
+            <h2>Email Newsletter</h2>
+        </div>
+        <div class="release-notes">
+            <div *ngIf="newsletter.email_address">
+                Status: <strong>{{ newsletter.status }}</strong>
+            </div>
+            <div *ngIf="!newsletter.email_address">
+                You are not subscribed to email newsletter updates.
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+
+</div>
