--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,8 +82,13 @@ p {
 
 .invert {
     max-width: 1000px;
-    display: block;
+    display: flex;
+    justify-content: center;
     margin: 0px auto;
+
+    a {
+        justify-content: center;
+    }
     
     @media (max-width: $breakpoint-mobile) {
         a {
@@ -455,14 +460,62 @@ footer{
     background-size: 4000%;
     background-position: bottom;
     margin-top: -20px;
+    position: relative;
+    z-index: 0;
 
-    //margin-top: -40px;
+    a { color: #fff; text-decoration: none; }
+
     
-    a {
-        color: #fff;
-        text-decoration: none;
-        &:hover {
-            text-decoration: underline;
+    .gradient {
+        width: 100%;
+        position: absolute;
+        height: 140px;
+        background-image: url(assets/images/footer-bg.png);
+        z-index: 1;
+        left: 0px;
+        top: 0px;
+    }
+
+    .sec {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        z-index: 2;
+
+        a {
+            display: block;
+            margin: 10px 0px 0;
+            height: 35px;
+            padding: 0px;
+            opacity: 0.6;
+            border-radius: 4px;
+
+            &:hover {
+                opacity: 0.8;
+            }
+        }
+    }
+
+    .copy {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        text-align: right;
+        z-index: 2;
+
+        a { color: #fff; }
+    }
+
+    .links {
+        position: relative;
+        z-index: 2;
+    
+        a {
+            color: #fff;
+            text-decoration: none;
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 }
@@ -535,6 +588,10 @@ header {
             color: #fff !important; 
             padding: 0px 10px;
             margin-left: 10px;
+        }
+
+        .btn-margin {
+            margin-right: 20px;
         }
 
         .mat-button {
@@ -722,6 +779,7 @@ img {
 
     h1 {
         font-size: 40px;
+        line-height: 40px;
         text-align: left;
     }
 
